[gd_scene load_steps=23 format=2]

[ext_resource path="res://code/main.gd" type="Script" id=1]
[ext_resource path="res://imag/CardsNovos/CardTreeGUIA.jpg" type="Texture" id=2]
[ext_resource path="res://imag/BG/Paint.jpg" type="Texture" id=3]
[ext_resource path="res://Telas/mainmusica.gd" type="Script" id=4]
[ext_resource path="res://music/mainmusica.wav" type="AudioStream" id=5]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_03.png" type="Texture" id=6]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_04.png" type="Texture" id=7]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_01.png" type="Texture" id=8]
[ext_resource path="res://imag/Constituica.png" type="Texture" id=9]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_02.png" type="Texture" id=10]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_05.png" type="Texture" id=11]
[ext_resource path="res://imag/Main/Papel.png" type="Texture" id=12]
[ext_resource path="res://Control.tscn" type="PackedScene" id=13]
[ext_resource path="res://Telas/papel.gd" type="Script" id=14]
[ext_resource path="res://music/sompapel.mp3" type="AudioStream" id=15]
[ext_resource path="res://Group 1.png" type="Texture" id=16]
[ext_resource path="res://progress.png" type="Texture" id=17]
[ext_resource path="res://Subtract.png" type="Texture" id=18]
[ext_resource path="res://progressCenadao.png" type="Texture" id=19]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/Oswald-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "mensagem",
"speed": 8.0
} ]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 1029.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo_01" type="Label" parent="HUD"]
modulate = Color( 0.560784, 0.298039, 0.105882, 1 )
margin_left = 2.0
margin_right = 290.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "PARTE 1 - ORÇAMENTO PÚBLICO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo_02" type="Label" parent="HUD"]
modulate = Color( 0.392157, 0.611765, 0.588235, 1 )
margin_left = -1.0
margin_top = 43.0
margin_right = 287.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "PARTE 2 - QUESTÃO AMBIENTAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo_03" type="Label" parent="HUD"]
modulate = Color( 0.776471, 0.313726, 0.282353, 1 )
margin_left = -1.0
margin_top = 81.0
margin_right = 384.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 3 )
text = "PARTE 3 - CONSTRUÇÃO DA OBRA PÚBLICA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="HUD"]
position = Vector2( 885, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 6

[node name="Pop" type="TextureProgress" parent="HUD/Node2D"]
margin_left = 68.0
margin_top = 86.0
margin_right = 123.0
margin_bottom = 357.0
step = 5.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 18 )
texture_progress = ExtResource( 17 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congra" type="TextureProgress" parent="HUD/Node2D"]
margin_left = 146.0
margin_top = 86.0
margin_right = 201.0
margin_bottom = 357.0
step = 5.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 18 )
texture_progress = ExtResource( 19 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chamadas" type="Sprite" parent="."]
position = Vector2( 504.13, 259 )
scale = Vector2( 1.32384, 1.32384 )
z_index = 8
texture = ExtResource( 2 )
hframes = 3
vframes = 7

[node name="BG" type="Sprite" parent="."]
position = Vector2( 514, 300.312 )
z_index = -2
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Consulta_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 509, 288 )
scale = Vector2( 0.701942, 0.690965 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="BTN" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Papel" type="Sprite" parent="BTN"]
position = Vector2( 617, 464 )
z_index = -2
texture = ExtResource( 12 )
hframes = 5
frame = 1

[node name="PapelArea" type="Control" parent="BTN/Papel"]
anchor_left = 0.057
anchor_top = 0.142
anchor_right = 0.905
anchor_bottom = 0.858
margin_left = -39.503
margin_top = -47.49
margin_right = -39.495
margin_bottom = -47.51
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tablet2" type="AnimatedSprite" parent="BTN"]
position = Vector2( 365.75, 485.5 )
scale = Vector2( 0.954545, 0.954545 )
z_index = -2
frames = SubResource( 1 )
animation = "mensagem"

[node name="TabletArea" type="Control" parent="BTN/Tablet2"]
anchor_left = 0.015
anchor_top = 0.273
anchor_right = 0.955
anchor_bottom = 0.844
margin_left = -49.485
margin_top = -33.018
margin_right = -49.545
margin_bottom = -36.704
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Positivo" type="Button" parent="BTN"]
anchor_left = 0.328
anchor_top = 0.632
anchor_right = 0.462
anchor_bottom = 0.712
margin_left = 0.127991
margin_top = -0.200012
margin_right = -0.0880127
margin_bottom = -0.200012
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negativo" type="Button" parent="BTN"]
anchor_left = 0.522
anchor_top = 0.628
anchor_right = 0.665
anchor_bottom = 0.708
margin_left = 0.471985
margin_top = 0.199982
margin_right = 0.039978
margin_bottom = 0.200012
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consulta" type="Button" parent="BTN"]
anchor_left = 0.776
anchor_top = 0.845
anchor_right = 0.917
anchor_bottom = 0.912
margin_left = 0.375977
margin_right = -72.0081
margin_bottom = -20.132
rect_scale = Vector2( 2, 2 )
text = "Proximo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Button" parent="BTN"]
anchor_left = 0.528
anchor_top = 0.63
anchor_right = 0.661
anchor_bottom = 0.7
margin_left = 0.328003
margin_top = -1.00003
margin_right = 0.135986
margin_bottom = 1.99997
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Button" parent="BTN"]
anchor_left = 0.327
anchor_top = 0.632
anchor_right = 0.458
anchor_bottom = 0.71
margin_left = 0.151978
margin_top = -0.200012
margin_right = 0.00796509
margin_bottom = -3.05176e-05
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 154.0
margin_top = 282.0
margin_right = 929.0
margin_bottom = 474.0

[node name="Info" type="Control" parent="."]
margin_left = 544.0
margin_top = 247.0
margin_right = 688.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainmusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
script = ExtResource( 4 )

[node name="papel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
script = ExtResource( 14 )

[connection signal="mouse_entered" from="BTN/Papel/PapelArea" to="." method="_on_PapelArea_mouse_entered"]
[connection signal="mouse_entered" from="BTN/Tablet2/TabletArea" to="." method="_on_Tablet_mouse_entered"]
[connection signal="button_up" from="BTN/Positivo" to="." method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Positivo" to="papel" method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="." method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="papel" method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Consulta" to="." method="_on_Consulta_button_up"]
[connection signal="button_down" from="BTN/B" to="." method="_on_B_button_down"]
[connection signal="button_down" from="BTN/A" to="." method="_on_A_button_down"]
[connection signal="button_down" from="BTN/A" to="papel" method="_on_A_button_down"]
[connection signal="mouse_entered" from="Info" to="." method="_on_Info_mouse_entered"]
[connection signal="mouse_exited" from="Info" to="." method="_on_Info_mouse_exited"]
